--- a/public/app/tasks/tasks.css
+++ b/public/app/tasks/tasks.css
@@ -1,10 +1,10 @@
 ﻿.task-highlited {
     background-color: #ffffcc;
-    border-left: 21px solid #ffeb3b!important;
+    border-left: 6px solid #ffeb3b!important;
 }
 .task-default {
     padding: 4px 0px;
-    border-left: 21px solid #F2F7F9;    
+    border-left: 6px solid #F2F7F9;    
 }
 
 .col-md-10 {
